Some changes to fix for broken UI on Firefox 3 and safari on Mac

--- a/portlet/ecm/src/main/webapp/skin/webui/component/explorer/control/DefaultStylesheet.css
+++ b/portlet/ecm/src/main/webapp/skin/webui/component/explorer/control/DefaultStylesheet.css
@@ -16,8 +16,8 @@
 }
 
 .UIJCRExplorerPortlet .UIJCRExplorer .UIViewBar .SelectViewLabel {
-  float: left;
   padding-left: 8px;
+  padding-right:5px;
 }
 
 .UIJCRExplorerPortlet .UIJCRExplorer .UIViewBar .SelectViewBox {
@@ -25,7 +25,6 @@
 }
 
 .UIJCRExplorerPortlet .UIJCRExplorer .UIViewBar .SelectBox {
-  float: left;
   padding-left: 6px;
   margin-top: 2px;
 }
